# building-stuff

./: Cargo.toml  README.md
resources/: display_config.ron  hud.ron  input.ron
src/: game_state.rs  main.rs
src/components/: camera_self.rs  grabbable.rs  loading.rs  mergeable.rs  mod.rs  physics_body.rs
src/resources/: mod.rs  my_world.rs
src/systems/: loaded.rs  merge.rs  mod.rs  movement.rs  moving.rs  physics.rs  pointing.rs  rotation.rs  translation.rs
src/utils/: find_pointed_object.rs  mod.rs
